tools/function-summary/bindgen_20210704.rs

#[doc = " Palette API. Some terminals only support 256 colors, but allow the full"]
#[doc = " palette to be specified with arbitrary RGB colors. In all cases, it's more"]
#[doc = " performant to use indexed colors, since it's much less data to write to the"]
#[doc = " terminal. If you can limit yourself to 256 colors, that's probably best."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ncpalette {
    #[doc = " RGB values as regular ol' channels"]
    pub chans: [u32; 256usize],
}
#[test]
fn bindgen_test_layout_ncpalette() {
    assert_eq!(
        ::core::mem::size_of::<ncpalette>(),
        1024usize,
        concat!("Size of: ", stringify!(ncpalette))
    );
    assert_eq!(
        ::core::mem::align_of::<ncpalette>(),
        4usize,
        concat!("Alignment of ", stringify!(ncpalette))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncpalette>())).chans as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ncpalette),
            "::",
            stringify!(chans)
        )
    );
}
impl Default for ncpalette {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
extern "C" {
    #[doc = " Create a new palette store. It will be initialized with notcurses' best"]
    #[doc = " knowledge of the currently configured palette. The palette upon startup"]
    #[doc = " cannot be reliably detected, sadly."]
    pub fn ncpalette_new(nc: *mut notcurses) -> *mut ncpalette;
}
extern "C" {
    #[doc = " Attempt to configure the terminal with the provided palette 'p'. Does not"]
    #[doc = " transfer ownership of 'p'; ncpalette_free() can (ought) still be called."]
    pub fn ncpalette_use(nc: *mut notcurses, p: *const ncpalette) -> cty::c_int;
}
extern "C" {
    #[doc = " Free the palette store 'p'."]
    pub fn ncpalette_free(p: *mut ncpalette);
}
#[doc = " Capabilities, derived from terminfo, environment variables, and queries"]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct nccapabilities {
    #[doc = " size of palette for indexed colors"]
    pub colors: cty::c_uint,
    #[doc = " are we using utf-8 encoding? from nl_langinfo(3)"]
    pub utf8: bool,
    #[doc = " 24bit color? COLORTERM/heuristics/terminfo 'rgb'"]
    pub rgb: bool,
    #[doc = " can we change the palette? terminfo 'ccc'"]
    pub can_change_colors: bool,
    #[doc = " do we have (good, vetted) Unicode 1 quadrant support?"]
    pub quadrants: bool,
    #[doc = " do we have (good, vetted) Unicode 13 sextant support?"]
    pub sextants: bool,
    #[doc = " do we have Braille support? (linux console does not)"]
    pub braille: bool,
}
#[test]
fn bindgen_test_layout_nccapabilities() {
    assert_eq!(
        ::core::mem::size_of::<nccapabilities>(),
        12usize,
        concat!("Size of: ", stringify!(nccapabilities))
    );
    assert_eq!(
        ::core::mem::align_of::<nccapabilities>(),
        4usize,
        concat!("Alignment of ", stringify!(nccapabilities))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<nccapabilities>())).colors as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(nccapabilities),
            "::",
            stringify!(colors)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<nccapabilities>())).utf8 as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(nccapabilities),
            "::",
            stringify!(utf8)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<nccapabilities>())).rgb as *const _ as usize },
        5usize,
        concat!(
            "Offset of field: ",
            stringify!(nccapabilities),
            "::",
            stringify!(rgb)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<nccapabilities>())).can_change_colors as *const _ as usize
        },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(nccapabilities),
            "::",
            stringify!(can_change_colors)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<nccapabilities>())).quadrants as *const _ as usize },
        7usize,
        concat!(
            "Offset of field: ",
            stringify!(nccapabilities),
            "::",
            stringify!(quadrants)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<nccapabilities>())).sextants as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(nccapabilities),
            "::",
            stringify!(sextants)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<nccapabilities>())).braille as *const _ as usize },
        9usize,
        concat!(
            "Offset of field: ",
            stringify!(nccapabilities),
            "::",
            stringify!(braille)
        )
    );
}
extern "C" {
    #[doc = " Returns a 16-bit bitmask of supported curses-style attributes"]
    #[doc = " (NCSTYLE_UNDERLINE, NCSTYLE_BOLD, etc.) The attribute is only"]
    #[doc = " indicated as supported if the terminal can support it together with color."]
    #[doc = " For more information, see the \"ncv\" capability in terminfo(5)."]
    pub fn notcurses_supported_styles(nc: *const notcurses) -> cty::c_uint;
}
extern "C" {
    #[doc = " Returns the number of simultaneous colors claimed to be supported, or 1 if"]
    #[doc = " there is no color support. Note that several terminal emulators advertise"]
    #[doc = " more colors than they actually support, downsampling internally."]
    pub fn notcurses_palette_size(nc: *const notcurses) -> cty::c_uint;
}
extern "C" {
    pub fn notcurses_detected_terminal(nc: *const notcurses) -> *const cty::c_char;
}
extern "C" {
    #[doc = " Can we directly specify RGB values per cell, or only use palettes?"]
    pub fn notcurses_cantruecolor(nc: *const notcurses) -> bool;
}
extern "C" {
    #[doc = " Can we fade? Fading requires either the \"rgb\" or \"ccc\" terminfo capability."]
    pub fn notcurses_canfade(nc: *const notcurses) -> bool;
}
extern "C" {
    pub fn notcurses_canchangecolor(nc: *const notcurses) -> bool;
}
extern "C" {
    #[doc = " Can we load images? This requires being built against FFmpeg/OIIO."]
    pub fn notcurses_canopen_images(nc: *const notcurses) -> bool;
}
extern "C" {
    #[doc = " Can we load videos? This requires being built against FFmpeg."]
    pub fn notcurses_canopen_videos(nc: *const notcurses) -> bool;
}
extern "C" {
    #[doc = " Is our encoding UTF-8? Requires LANG being set to a UTF8 locale."]
    pub fn notcurses_canutf8(nc: *const notcurses) -> bool;
}
extern "C" {
    #[doc = " Can we reliably use Unicode halfblocks?"]
    pub fn notcurses_canhalfblock(nc: *const notcurses) -> bool;
}
extern "C" {
    #[doc = " Can we reliably use Unicode quadrants?"]
    pub fn notcurses_canquadrant(nc: *const notcurses) -> bool;
}
extern "C" {
    #[doc = " Can we reliably use Unicode 13 sextants?"]
    pub fn notcurses_cansextant(nc: *const notcurses) -> bool;
}
extern "C" {
    #[doc = " Can we reliably use Unicode Braille?"]
    pub fn notcurses_canbraille(nc: *const notcurses) -> bool;
}
extern "C" {
    #[doc = " Can we blit pixel-accurate bitmaps?"]
    pub fn notcurses_check_pixel_support(nc: *const notcurses) -> cty::c_int;
}
#[doc = " whenever a new field is added here, ensure we add the proper rule to"]
#[doc = " notcurses_stats_reset(), so that values are preserved in the stash stats."]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct ncstats {
    #[doc = " successful ncpile_render() runs"]
    pub renders: u64,
    #[doc = " successful ncpile_rasterize() runs"]
    pub writeouts: u64,
    #[doc = " aborted renders, should be 0"]
    pub failed_renders: u64,
    #[doc = " aborted writes"]
    pub failed_writeouts: u64,
    #[doc = " bytes emitted to ttyfp"]
    pub render_bytes: u64,
    #[doc = " max bytes emitted for a frame"]
    pub render_max_bytes: i64,
    #[doc = " min bytes emitted for a frame"]
    pub render_min_bytes: i64,
    #[doc = " nanoseconds spent rendering"]
    pub render_ns: u64,
    #[doc = " max ns spent in render for a frame"]
    pub render_max_ns: i64,
    #[doc = " min ns spent in render for a frame"]
    pub render_min_ns: i64,
    #[doc = " nanoseconds spent writing frames to terminal"]
    pub writeout_ns: u64,
    #[doc = " max ns spent writing out a frame"]
    pub writeout_max_ns: i64,
    #[doc = " min ns spent writing out a frame"]
    pub writeout_min_ns: i64,
    #[doc = " cells we elided entirely thanks to damage maps"]
    pub cellelisions: u64,
    #[doc = " total number of cells emitted to terminal"]
    pub cellemissions: u64,
    #[doc = " RGB fg elision count"]
    pub fgelisions: u64,
    #[doc = " RGB fg emissions"]
    pub fgemissions: u64,
    #[doc = " RGB bg elision count"]
    pub bgelisions: u64,
    #[doc = " RGB bg emissions"]
    pub bgemissions: u64,
    #[doc = " default color was emitted"]
    pub defaultelisions: u64,
    #[doc = " default color was elided"]
    pub defaultemissions: u64,
    #[doc = " refresh requests (non-optimized redraw)"]
    pub refreshes: u64,
    #[doc = " how many application-synchronized updates?"]
    pub appsync_updates: u64,
    #[doc = " total bytes devoted to all active framebuffers"]
    pub fbbytes: u64,
    #[doc = " number of planes currently in existence"]
    pub planes: cty::c_uint,
    #[doc = " nanoseconds spent rasterizing"]
    pub raster_ns: u64,
    #[doc = " max ns spent in raster for a frame"]
    pub raster_max_ns: i64,
    #[doc = " min ns spent in raster for a frame"]
    pub raster_min_ns: i64,
    #[doc = " sprixel draw count"]
    pub sprixelemissions: u64,
    #[doc = " sprixel elision count"]
    pub sprixelelisions: u64,
    #[doc = " sprixel bytes emitted"]
    pub sprixelbytes: u64,
}
